# surfer

./: .gitlab-ci.yml  Cargo.toml  book.toml
.github/workflows/: sync.yml
libsurfer/: Cargo.toml  Trunk.toml
libsurfer/src/: benchmark.rs  command_parser.rs  command_prompt.rs  cxxrtl_container.rs  drawing_canvas.rs  fzcmd.rs  graphics.rs  help.rs  hierarchy.rs  lib.rs  logs.rs  marker.rs  menus.rs  message.rs  mousegestures.rs  overview.rs  state.rs  system_state.rs  time.rs  toolbar.rs  variable_filter.rs  view.rs  viewport.rs  wave_data.rs  wellen.rs
libsurfer/src/cxxrtl/: io_worker.rs
libsurfer/src/tests/: snapshot.rs  wcp.rs
libsurfer/src/translation/: clock.rs  spade.rs
libsurfer/src/wcp/: wcp_handler.rs  wcp_server.rs
surfer/: Cargo.toml
surfer/src/: command_prompt.rs  main.rs  menus.rs  message.rs  mousegestures.rs  view.rs  wasm_api.rs
surver/src/: server.rs
