[package]
name = "surfer"
version.workspace = true
license.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
camino.workspace = true
color-eyre.workspace = true
eframe = { version = "0.29.1", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui.workspace = true
libsurfer.path ="../libsurfer"
log.workspace = true
tokio.workspace = true
ron.workspace=true
surver.path = "../surver"


[features]
accesskit = ["eframe/accesskit", "eframe/web_screen_reader"]
